# AgentInBox

./: .gitignore  Dockerfile  README.md  env.py  inference.py  models.py  openenv.yaml  prevalidate.py  pyproject.toml  requirements.txt  tasks.py
server/: __init__.py  app.py
